--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ main {
     width: 255px;
     height: 355px;
     background-color: aliceblue;
+    border: 2px solid aliceblue;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -30,24 +31,48 @@ main {
     align-items: center;
     transition: transform 1s;
     transform-style: preserve-3d;
+    overflow: hidden;
+
+    position: relative;
+    transform: rotateY(180deg);
+
+    div {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        transform: rotateY(180deg);
+        background-color: aliceblue;
+        backface-visibility: hidden;
+    }
+
+    img {
+        width: 100%;
+        height: 100%;
+        transform: rotateY(0deg);
+        backface-visibility: hidden;
+    }
 
 }
 
 .mystery-card.flipped {
     transition: transform 0.5s;
-    transform: rotateY(180deg);
-}
+    transform: rotateY(0deg);
 
-.front {
-    transform: rotateY(180deg);
-}
+    div {
+        transform: rotateY(0deg);
+    }
 
-.back {
     img {
-        width: 255px;
-        height: 355px;
+        transform: rotateY(180deg);
     }
 }
+
 
 .number {
     font-family: cursive;
